Random Bug Fixes
* When creating a new task with an existing task open, the new task retains the previous task's description
* Task cards look strange when they have no descriptions because there is a large gap left for the missing description; instead, we should just not render the description section
* In the task workspace, when there is no description, the rich text field's viewer is just empty; instead, we should display the placeholder text

--- a/client/src/components/tm_rich_text_field/index.scss
+++ b/client/src/components/tm_rich_text_field/index.scss
@@ -6,3 +6,7 @@
   padding: 6px 12px;
   div > p { margin: 0; };
 };
+
+.rich-text-placeholder {
+  padding: 6px 12px;
+};
